--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -49,12 +49,13 @@
       {% block body %} {% endblock %}
     </div>
 
-
+{% block javascript %}
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="{{ asset('assets/js/jquery-3.1.1.slim.min.js') }}">  </script>
+    {#<script src="{{ asset('assets/js/jquery-3.1.1.slim.min.js') }}">  </script>#}
     <script src="{{ asset('assets/js/jquery-3.1.2.slim.min.js') }}">  </script>
     <script src="{{ asset('assets/js/bootstrap.js') }}">  </script>
+  {% endblock %}
   </body>
 </html>
