sistema voy final

--- a/src/AppBundle/Resources/views/Estudiante/edit_estudiante.html.twig
+++ b/src/AppBundle/Resources/views/Estudiante/edit_estudiante.html.twig
@@ -20,7 +20,7 @@
         </div>
 
         {#<div class="form-group">
-            <label for="fechaNacimiento">Edad</label>
+            <label for="fechaNacimiento">fecha</label>
             <input type="date" class="form-control" id="fechaNacimiento" placeholder="Fecha Naciiento"
                    value="{{ estudiante.fechaNacimiento }}">
         </div>#}
@@ -61,7 +61,7 @@
                 var nombre = $('#nombre').val();
                 var edad = $('#edad').val();
                 var id = $('#id').val();
-                /** var fecha = $('#fechaNacimiento').val(); */
+               // var fecha = $('#fechaNacimiento').val();
 
                  //alert(nombre+", "+edad);
 
